<resources>
    <string name="app_name">VK</string>

    <string name="news">Новости</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>

    <string name="user_name">Пользователь</string>
    <string name="menu_friends">Друзья</string>
    <string name="menu_groups">Группы</string>
    <string name="menu_bookmarks">Закладки</string>
    <string name="menu_liked">Понравилось</string>
    <string name="menu_statistic">Статистика</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_settings">Настройки</string>
    <string name="status">Статус</string>
    <string name="FIO">Фамилия Имя</string>
    <string name="last_seen">Был в сети %1$s</string>
    <string name="default_status_text">Расскажите о себе</string>
    <string name="City">City</string>
    <string name="oauth_url">https://oauth.vk.com/authorize?client_id=%1$s&amp;display=mobile&amp;scope=%2$s&amp;redirect_uri=%3$s&amp;response_type=token&amp;v=%4$s</string>
    <string name="auth_settings">friends,notify,photos,audio,video,docs,notes,pages,groups,offline</string>

</resources>
