<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/user_action">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends_24dp"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups_24dp"
            android:title="@string/menu_groups" />
    </group>
    <group android:id="@+id/profile_info">
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_menu_bookmarks_24dp"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_liked"
            android:icon="@drawable/ic_menu_liked_24dp"
            android:title="@string/menu_liked" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_statistic_24dp"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help_24dp"
            android:title="@string/menu_help" />
    </group>

    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_24dp"
            android:title="@string/menu_settings" />
    </group>

</menu>