<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileFIO"
        app:layout_constraintLeft_toRightOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textSize="8pt"
        android:textStyle="bold"
        android:text="@string/FIO"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileStatus"
        app:layout_constraintLeft_toRightOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileFIO"
        android:layout_margin="10dp"
        android:text="@string/status"
        style="@style/profile_status"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileLastSeen"
        app:layout_constraintLeft_toRightOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileStatus"
        android:layout_margin="10dp"
        android:text="@string/last_seen"
        android:textSize="@dimen/profile_last_seen_text_size"
        />


</androidx.constraintlayout.widget.ConstraintLayout>